@@ -147,19 +147,19 @@
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALUSURBVDhPlVLvS1NhGL3UB+lDf4FQWVppqFkUQl+CMCgk
-        0JrlzPyZmkZTUlCDLI2KaMZkKuZkTppr06bbxDknbsx9MGtujm25nDL9oHJJGTp1MvV079tQMiI68HLv
-        fZ/3nPee8zwUi/7+/rDBwUEOs5RardbV19cXZPY2madFo9HI1Wr1VYVCcZAc3o+hoaEYnU43YbPZsLi4
-        iNXVVWxvb2NrawtLS0vwer0wmUzo7u4ekcvl4SHaHhiyYXZ2Fjs7O/gbgsEgrFYrKnWlXo6C8/ufMAJ0
-        IBD4pwBN0+CpC4J5Gq4xRP0FxjO9sbEB1oLH4yE2Njc38e2HA+8sL8Ez5qFkKBuF2kzUmqrwdLgC6dIb
-        uhCdopiA6PX1dczNzcFiscBsNqN/TIM6cxVEdiHU37vQ4/6IT5NSKFwdkDnFKO97iOTGJA8RUKlU9Nra
-        GpaXlzE/P0+ExLYWNFvroXIrUDdSjZye27grT0WllodyTQmShUl6QmbR29tL+/1+4pENc3p6GtWmMhQN
-        ZCJfw0WFigeDwUCEM1vTgteEV0w1NdSBRH7ioV0BtnULCwuE7Ha7SeumpqaIHe2AFnq9nohnN2YE/uiC
-        UqmkV1ZWyA2Tk5NwOp0kTPbdaDSCGSSUSkqIaFNTEx2i7YEZENrn82FmZgYOhwN2u53cbndMYNgwjPzW
-        LHAbb5E6n8+nE5+cNZ2viEUcLxoxhVFeqrOzk2aLrA1CDAm4XC4Ut+ejWJ6L+x8ycenZBVysTsCd5hTw
-        R2uRJ8lAZG5ECyWVSq8zyz8+Pk5Glw2U7Ur6+xQUybLRbOFD+OUNBGOvUP/5Bd6OPif7kTnHvh7NCr9M
-        bHR0dES0t7e3icVin0QiQVdXF2QyGdJep+JeWxq4LTcRXxaDMyUncargBI7nHjHukvdDJBIdZsJKaGho
-        iBcIBGHnHsca4x5F20Pl/weHQx08/SBKEfrcB4r6Ca67TVPH5jSuAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALRSURBVDhPlVLvS5NRGH3JD9KH/gKhsrTSULMohL4EYVBI
+        oDVLbf5cZlotSSkNsjQqMg1lKqYyNxxrm825jc05cWPug1lzc2zL5Q+mH1ReUkTnL6ae3vc2lIyIDly4
+        z33uOfee53koFjqdLrS3t5fDLKVer/eo1eoAc7ah1WptGo1GxsSX5HJ5CLm8F319fdEGg2HE4XBgbm4O
+        y8vL2NrawubmJubn5+Hz+WCxWNDZ2Tkgk8nCgrRdMGTT1NQUtre38TcEAgHY7XY8NvB9HDnn958wAvT6
+        +vo/BWiaxn0VL5CnSTcHqb/AeKbX1tbAWhgfHyc2NjY28O2HC+9tr8A356GoLxt39FxUWsrwrL8UaZKr
+        hiCdolQqFb26uorp6WnYbDZYrVbohjSospah1SmA+rsCXd6P+DQqgdwjhtQtRIn2HpIaEsd3BFZWVrCw
+        sICZmRkiJHQ0o8lei26vHFUD5cjpuoFbshQ80fNRoilCkiDRSMgsWAG/3088ssWcmJhAuaUYBT1c8DTp
+        KO3mw2QyEWFuS2rgsuCipaKC2pdQk7B/R4Bt3ezsLCF7vV7SurGxMWJH36OH0Wgk4pkNGet/dEGpVNJL
+        S0vkhdHRUbjdblJMdm82m8EMEh6KiohoY2MjHaTtghkQenFxEZOTk3C5XHA6neR1p2sE/aZ+8FqykN5w
+        neSrq6vphKenLGdKYxDLj0J0fqSP6ujooNkka4MQgwIejweF7TwUynJxu4OL88/P4lx5PG42JaNmsBJ5
+        ogxE5IY3UxKJ5Aqz/MPDw2R02YKyXUn7kIwCaTaabDUQfHmLuqHXqP38Eu8GX5DziJzDXw9lhV0gNsRi
+        cXh7e3ubUChcFIlEUCgUkEqlSH2Tgsy2VKQ3X0NccTROFh3D8fyjOJJ70LxD3ovW1tYDTLHi6+vr4+rq
+        6kJPP4oxxz6IcgbT/w8Ohwo5cTdSHgz3gKJ+AlB3TS3rp9+nAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -185,21 +185,21 @@
   <data name="btnLoadModpack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM8SURBVDhPhZLdT9NXGMd7syX7B8jYhVdmIcK26IgTDZFN
-        hOooapZosis0wwVZwrLMYKLObOkEpaykoewCCXuDKIxIK8VRKIiUl2qhFfsCFBwI5a2UFlwppfD77LR2
-        2YVZ9k1OTp6T8/08L+fI/ktOnSLV3Xr8rlhdzmb53sTx/2uy41TS2D2F0q2XB5adt1iwluP8/eiLp3eO
-        qNyN2W8lrr0qq/X8a+OG/MKxtuMer03D9uY80sYs61N3Cc/pmXnwFU9+zpy2/ZL5xcCdA28kbC810X4y
-        x21QPJwe+Ibw6hNgA6QgUf9jJlpOEnZXEJlpYt2lxaM/x0htxtBwbboibh4z5Ne79ArJP95AyDeK/1k3
-        zyziYt8NXH98yVRHESF3FSHbNTY9dWzNNrHySImz8RQW7b5G2ZhOEZU2Z4j4hvGPavBZlXh7SvDoTjNU
-        fYitlREIjcNyB9KfWnCWwlwD0UklFk1aVObQfxzc2XwOLxxszbWyZrtOyH5NrEvM6fLiZyy1w0wtkusS
-        IVMWS4ZM1pxV9Kv3BGWO1mPBnQ0B+GtCQJzgMxF23iBkKWKpLY/oRCVMqoiY5ay0H2CxR85i5wmCdhXm
-        yhigJTe4HQe4YV2UGxgSECNRj4a13tNEHsoJmg6x0p/Lkuko84aPmNflsvqonL6bKQLQlP0SIFogaAF/
-        t+j3Hiy0II1fITAoZ9l8hJamfL6uOcP5H05QcD2Lup8+pU/5dlBmbzgckaIL4uWmRPZekf0+LDaLQf2G
-        NFODb0DO7cZjfNt8ljaHFvu8EXXnBc6o3+Fi6a5tmf3XrM5JUykb3h4B8cCqgHgbYLZeAKpZ7s3hbHk2
-        uqdV6Fwa8UdA1VWIuutzDhYl74gW9rxuqz9YOFKX4Zl+cJXt1UExC6uo4jbSdDULxg/Ju7yXdsetuPkf
-        6Ue1fFCcTPwzxWSvyUh6/OP73w9p9wW85u/EUAUkYGZttILDJbuoMJ6jzFgQN5d1FMQrSC9OCifs/8pS
-        /V7qoPrdhv6KNMk3rOb5/RKuXknjE1UKlcbP4pljeyzeX5ysSthelflmak5/WUq3uWy3uU+5W7H/wpvl
-        6cXJ67GyY3sslslksr8BcESC4pY2d9QAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM8SURBVDhPhZJdTNNXGId7syW7X8zYhVdmIeC2yBYnGiKb
+        CNVR1CzRZFdohkYxYVm2YDKdmekEpKykoewCCWYOojACrRRH+RJbgWqhFVsKFBwVylcpLbhSSuH/7LR2
+        2YVZ9ktOTt6T83vej3Nk/yWnTpHqaj3aIlaXs0m+J3H8/5rsOLFj7J5C6dLnBJacN5m3luL8/fDLZ3cP
+        qVwNWe8mrr0uq/XsG+OGvIKxtqNur03D1sYc0voMa1MthGf1eB58w9NbGdO2XzMu9t/d91bC9koT7cez
+        XQbFw+n+HwivPAXWQQoS9T9hovk4YVc5EU8ja6Na3PozDNekDw7VfKyIm8cMeXWOVoXkH68n5BvB/7yH
+        5xZx0VTG6B9fM9VxnpCrkpDtKhvuWjZnGll+rMTZcAKLNq1BNtaiiEobHiK+IfwjGnxWJd7eIty6kwxW
+        HWBzeRhC47DUgfSnFpzFMFtPdFKJRZMSlTn0nwe3N17ASwebs62s2q4Tsl8V6xKzutz4GYvt4KlBGr1E
+        qDuTRUMGq85KTOqUoMzReiS4vS4Af00IiBN83YSdZYQs51lsyyU6UQGTKiJmOcvt+1jolbPQeYygXYWp
+        IgZozgluxQEuWBPlBgYFxEjUrWG17ySRh3KC3QdYfpTDYvdh5gyfMafLYeVxKaYbyQLQmPUKIFogaAF/
+        j+j3Hsw3I41fJjAgZ8l8iObGPL6tPsXZn4+Rfz2T2ltfYrr2XlA2fPtgRIrOi5ebEtn7RPb7sNAkBvUb
+        kqcaX7+cOw1H+LHpNG0OLfY5I+rOC5xSv893xTu3ZPbbmZ2T3cWse3sFxA0rAuKth5k6AahiqS+b06VZ
+        6J5VohvViD8Cqq4C1F3n2H8uaVu0kPKmrW5/wXBtunv6wRW2VgbELKyiijtI01XMGz8l9/s9tDtuxs3/
+        SD+i5ZPCJOKfKSZ7dfqOJ7989NOANi3gNV8TQxWQgJnVkXIOFu2k3HiGEmN+3FzSkR+vIK3w7XDC/q8s
+        VR+mDqg/qDeV7ZZ8Q2pe3C/iyuXdfKFKpsL4VTxzbI/FewuTVAnb6zLfSM1+VJLcYy7ZZTYpdyn2Xnin
+        NK0waS1WdmyPxTKZTPY3O+yCwGkfdEEAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -210,7 +210,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAU
-        CwAAAk1TRnQBSQFMAgEBBgEAAdABAgHQAQIBEAEAARABAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        CwAAAk1TRnQBSQFMAgEBBgEAAeABAgHgAQIBEAEAARABAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEQBgABEDQAAf8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/
         AX8B/wF/Af8BfwH/AX9KAAHeAXsBVwFfAWoBKgHlARkB5QEZAUoBKgFXAV8B3gF7CgAB/wF/Af8BfwHe
         AXsBnAFzAdYBYgEQAVYBjAFJAYwBSQEQAVYB1gFiAZwBcwHeAXsB/wF/Af8Bf0gAAbsBbwFIASIBiAEq
